--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
 name: Deploy to ECR
 
 on:
+  workflow_run:
+    workflows: ["Scala CI"]
+    branches: ["main"]
+    types:
+      - completed
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -24,6 +29,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: SBT assembly
+        id: sbt
+        uses: lokkju/github-action-sbt@master
+        with:
+          commands: assembly
+          sbt_project_directory: .
+          
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
