--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: SBT assembly
-        id: sbt
-        uses: lokkju/github-action-sbt@master
-        with:
-          commands: assembly
-          sbt_project_directory: .
-          
+      - name: Build Artifact
+        run: sbt assembly
+
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
