--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Variables
+        run: |
+          VER=$(cat version.sbt)
+          echo "VERSION=$VER" >> $GITHUB_ENV
+
       - name: Check out code repository
         uses: actions/checkout@v3
 
@@ -33,9 +38,9 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: $ECR_REGISTRY
+          ECR_REGISTRY: ${{ secrets.ECR_REPOSITORY }}
           ECR_REPOSITORY: fayi/my-ecr-repo
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${{ env.VERSION }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
