use github sha as docker version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ secrets.ECR_REPOSITORY }}
           ECR_REPOSITORY: fayi/my-ecr-repo
-          IMAGE_TAG: ${{ env.VERSION }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
