--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ jobs:
 
       - name: Set Variables
         run: |
-          VER=$(grep -o 'v\d*\.\d*\.\d*' version.sbt)
-          echo "VERSION=$VER" >> $GITHUB_ENV
+          which grep
+          # VER=$(grep -o 'v\d*\.\d*\.\d*' version.sbt)
+          # echo "VERSION=$VER" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
