--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Set Variables
         run: |
-          which grep
+          grep -o 'v\d*\.\d*\.\d*' version.sbt
           # VER=$(grep -o 'v\d*\.\d*\.\d*' version.sbt)
           # echo "VERSION=$VER" >> $GITHUB_ENV
 
