--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: Set Variables
         run: |
-          grep -o 'v\d*\.\d*\.\d*' version.sbt
+          ls
+          # grep -o 'v\d*\.\d*\.\d*' version.sbt
           # VER=$(grep -o 'v\d*\.\d*\.\d*' version.sbt)
           # echo "VERSION=$VER" >> $GITHUB_ENV
 
