Larry said use perl engine lol

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: Set Variables
         run: |
-          ls
-          # grep -o 'v\d*\.\d*\.\d*' version.sbt
+          grep -oP 'v\d*\.\d*\.\d*' version.sbt
           # VER=$(grep -o 'v\d*\.\d*\.\d*' version.sbt)
           # echo "VERSION=$VER" >> $GITHUB_ENV
 
